# cookiecutter-pypackage

./: 404.html  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: dev.yml  publish.yml
console_script_setup/: index.html
cookiecutter_pypackage/: cli.py
faq/: index.html
history/: index.html
pypi_release_checklist/: index.html
search/: search_index.json
tutorial/: index.html
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  preview.yml  release.yml
