[tool]
[tool.poetry]
name = "cookiecutter_pypackage"
version = "0.1.0"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Xie Wei <ampedee@gmail.com>", "Danielle Benesch <dbenesch@critias.ca>"]
readme = "README.md"
repository = "https://github.com/waynerv/cookiecutter-pypackage"
documentation = "https://waynerv.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  'cookiecutter_pypackage',
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
rich = "^13.4.1"
pydantic = "^1.10.4"

[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cookies",
  "isort",
  "black",
  "pyyaml",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "pytest-cov",
  "tox",
  "mkdocs-include-markdown-plugin",
  "fire",
  "mike",
  "livereload"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
