[tool]
[tool.poetry]
name = "cookiecutter_pypackage"
version = "0.1.0"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Xie Wei <ampedee@gmail.com>", "Danielle Benesch <dbenesch@critias.ca>"]
readme = "README.md"
repository = "https://github.com/waynerv/cookiecutter-pypackage"
documentation = "https://waynerv.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  'cookiecutter_pypackage',
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
rich = "^13.4.1"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
factory-boy = "^3.2.1"
pytz = "^2022.6"
tox = "^3.27.1"
pyyaml = "^6.0"
pytest-cookies = "^0.6.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-include-markdown-plugin = "^4.0.0"
mkdocs-material-extensions = "^1.1.1"
mkdocs-material = "^8.5.11"
mkdocstrings = "^0.19.0"
mkdocs-autorefs = "^0.4.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
